Fixing issues for TextArea in SpreadsheetView where it was too big and not transparent like the TextField.

--- a/controlsfx/src/main/resources/org/controlsfx/control/spreadsheet/spreadsheet.css
+++ b/controlsfx/src/main/resources/org/controlsfx/control/spreadsheet/spreadsheet.css
@@ -122,17 +122,34 @@ HorizontalHeaderColumn > TableColumnHeader.column-header.table-column.selected{
     -fx-cursor:hand;
 }
 
-/* We do not want to show the textfield, we want an Excel visual */
-CellView > .text-input.text-field,
-CellView > .text-input.text-area{
-    -fx-padding : 0.5em 0 0 -0.2em;
+/* We don't want to show the white background both for TextField
+and textArea. We want it to be transparent just like Excel.
+
+Also we need to shift to the left the editor a bit*/
+CellView > .text-input.text-field{
+    -fx-padding : 0 0 0 -0.2em;
+    -fx-background-color: transparent;
+}
+CellView > .text-input.text-area,
+CellView > TextArea .scroll-pane > .viewport{
     -fx-background-color: transparent;
 }
 
-/* We want to show a red background when the value entered is incorrect */
-CellView > .text-input.text-field.error{
-    -fx-background-insets: 0 0 0 -0.5em;
-    -fx-background-color: red;
+/* I shift by 3px, it's not clean but it works for normal row (24px) as it 
+centers the textArea.*/
+CellView > TextArea .scroll-pane{
+    -fx-padding : 3px 0 0 -0.15em;
+}
+
+CellView > TextArea .scroll-pane > .viewport .content{
+    -fx-padding : 0 0 0 0;
+    -fx-background-color: transparent;
+}
+/* The scrollBars must always have the same size because we may have
+really big font in the editor (48px) and the scrollBars become obese otherwise.*/
+CellView >TextArea .scroll-bar:vertical ,
+CellView >TextArea .scroll-bar:horizontal {
+    -fx-font-size : 1em;
 }
 
 .selection-rectangle{
